feat: responses api option added in openai provider
